# bandrip

./: Cargo.toml  README.md  flake.nix
src/: bandcamp.rs  downloader.rs  main.rs
