[package]
name = "bandrip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.5.0"
dirs = "5.0.1"
gjson = "0.8.1"
rand = "0.8.5"
reqwest = {version="0.11.24", features=["blocking"]}
scraper = "0.18.1"
tempfile = "3.10.0"
